feat: create styles.css file

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-    </head>
+<html lang="pt-br">
+<head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/styles.css">
     <title>Meu Portfólio</title>
-    </head>
-
-    <body>
-        <h1>Meu Portfólio cool</h1>
-    </body>
+</head>
+<body>
+    <h1>Meu Portfólio</h1>
+</body>
 </html>
