feat: alteração de um erro no h1

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Meu Portfólio</title>
 </head>
 <body>
-    <h1> class= "platypi" Meu Portfólio</h1>
+    <h1 class= "platypi">Meu Portfólio</h1>
 </body>
 </html>
