feat: Termino da header

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Meu Portfólio</title>
 </head>
 <body>
-    <h1 class= "platypi">Meu Portfólio</h1>
+    <header class="header">
+        <a href="#home" class="logo">Ana <span>Dev</span></a>
+
+        <nav class="navbar"> 
+            <a href="#home" class="active" >Início</a>
+            <a href="#Education">Acadêmico</a>
+            <a href="#services">Serviços</a>
+            <a href="#testimonials">Depoimentos</a>
+            <a href="#contact">Contato</a>
+        </nav>
+    </header>
 </body>
 </html>
+
